fix: correção z-index input e remoção border radius input text.

--- a/src/styles/efects.css
+++ b/src/styles/efects.css
@@ -102,6 +102,7 @@
 
 .has-content.input-container__input {
   background-color: var(--color-input-selected-background);
+  z-index: 0;
 }
 
 /* END INPUT FLOAT LABEL AND FOCUS */
